--- a/Esercizi Javascript/prova.html
+++ b/Esercizi Javascript/prova.html
@@ -2,7 +2,7 @@
     <head>
         <body>
             <h1>hello world</h1>
-            <button tipe="button">Cliccami</button>
+            <button tipe="button" onclick="alert('ciao')">Cliccami</button>
         </body>
     </head>
 </html>
