--- a/Esercizi Javascript/prova.html
+++ b/Esercizi Javascript/prova.html
@@ -1,8 +1,22 @@
-<html>
+<!DOCTYPE html>
+<html lang="it"dir="Itr">
     <head>
+        <meta charset="utf-8">
+        <title></title>
+        <!--COME FARE I COMMENTI-->
+        <script>
+            var a;//var lo posso dichiarare più volte
+            a=2;
+            a="ciao";
+            a=true;
+            //essendo in javascript, facciamo cosi i commenti.
+            var a=3;
+            let b=2;//let lo posso dichiarare solo 1 volta
+            document.write("<h1>Ciao</h1>")//stampa nella pagina
+        </script>
     </head>
         <body>
-            <h1>hello world</h1>
+            <h1>Hello World</h1>
             <button tipe="button" onclick="alert('ciao')">Cliccami</button>
         </body>
 </html>
