--- a/Esercizi Javascript/prova.html
+++ b/Esercizi Javascript/prova.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="it"dir="Itr">
+<html lang="it"dir="ltr">
     <head>
         <meta charset="utf-8">
         <title></title>
