--- a/Esercizi Javascript/prova.html
+++ b/Esercizi Javascript/prova.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title></title>
-        <!--COME FARE I COMMENTI-->
+        <!--COME FARE I COMMENTI IN HTML-->
         <script>
             var a;//var lo posso dichiarare più volte
             a=2;
