--- a/Esercizi Javascript/Fattura.html
+++ b/Esercizi Javascript/Fattura.html
@@ -9,7 +9,7 @@
                 <script>
                     var d,p,n,tot=0;
                     document.write("<table border=1>");
-                    var r=(prompt("Inserisci il numero di componenti"));
+                    var r=parseInt(prompt("Inserisci il numero di componenti"));
                     document.write("<tr><td>Articolo</td>");
                     document.write("<td>prezzo</td");
                     document.write("<td>numeroi</td");
@@ -23,7 +23,7 @@
                         document.write(p+"</td><td");
                         document.write(n+"</td><td");
                         document.write((n * p)+"</td>");
-                        document.write("<>");
+                        document.write("</tr></td>");
                         tot+=n*p;
                     }
                     document.write("</table>");
