--- a/Esercizi Javascript/Fattura.html
+++ b/Esercizi Javascript/Fattura.html
@@ -19,11 +19,11 @@
                         d=prompt("Inserisci descrizione nuovo componente");
                         p=prompt("Inserisci il prezzo unitario per "+d);
                         n=prompt("Inserisci numero articoli per "+d);
-                        document.write(d+"</td><td");
-                        document.write(p+"</td><td");
-                        document.write(n+"</td><td");
+                        document.write(d+"</td><td>");
+                        document.write(p+"</td><td>");
+                        document.write(n+"</td><td>");
                         document.write((n * p)+"</td>");
-                        document.write("</tr></td>");
+                        document.write("</tr>");
                         tot+=n*p;
                     }
                     document.write("</table>");
