--- a/Esercizi Javascript/Fattura.html
+++ b/Esercizi Javascript/Fattura.html
@@ -11,8 +11,8 @@
                     document.write("<table border=1>");
                     var r=parseInt(prompt("Inserisci il numero di componenti"));
                     document.write("<tr><td>Articolo</td>");
-                    document.write("<td>prezzo</td");
-                    document.write("<td>numeroi</td");
+                    document.write("<td>prezzo</td>");
+                    document.write("<td>numero</td>");
                     document.write("<td>totale</td></tr>");
                     for(var i=1;i<=r;i++){
                         document.write("<tr><td>");
