--- a/Esercizi Javascript/Fattura.html
+++ b/Esercizi Javascript/Fattura.html
@@ -11,9 +11,9 @@
                     document.write("<table border=1>");
                     var r=parseInt(prompt("Inserisci il numero di componenti"));
                     document.write("<tr><td>Articolo</td>");
-                    document.write("<td>prezzo</td>");
-                    document.write("<td>numero</td>");
-                    document.write("<td>totale</td></tr>");
+                    document.write("<td>Prezzo</td>");
+                    document.write("<td>Numero</td>");
+                    document.write("<td>Totale</td></tr>");
                     for(var i=1;i<=r;i++){
                         document.write("<tr><td>");
                         d=prompt("Inserisci descrizione nuovo componente");
