--- a/Esercizi Javascript/prova-array2.html
+++ b/Esercizi Javascript/prova-array2.html
@@ -16,9 +16,11 @@
                 document.write("<br>"+value+" ");
             }
             var r
+            document.write("<table border='10'>")
             for(r of arr){
-                document.write("<tr><td>"+r+"</td><td><img src='r'"+"</td><td><img src='r'"+"</tr></td>")
+                document.write("<tr><td>"+r+"</td><td><img src='Immagini/"+r+".jpg'>"+"</td></tr>")
             }
+            document.write("</table>")
         </script>
     </body>
 </html>
