--- a/Esercizi Javascript/casaccio.html
+++ b/Esercizi Javascript/casaccio.html
@@ -16,5 +16,6 @@
     </head>
         <body>
             <button type="button" onclick="somma(5,6)">Fai la somma</button>
+            <a href="javascript:alert(somma(5,6))">Clicca</a>
         </body>
 </html>
