--- a/Esercizi Javascript/Calcolatore di calorie.html
+++ b/Esercizi Javascript/Calcolatore di calorie.html
@@ -4,14 +4,13 @@
         <meta charset="utf-8">
         <tite>Calcolatore di Calorie</tite>
     </head>
-    <script>
-        <div class="immagini">
-            var
-            var
-            var
-        </div>
-    </script>
     <body>
-
+        <script>
+            <div class="immagini">
+                var sport=[]
+                var calorie=[]
+                var immagini=[]
+            </div>
+        </script>
     </body>
 </html>
