--- a/Esercizi Javascript/Calcolatore di calorie.html
+++ b/Esercizi Javascript/Calcolatore di calorie.html
@@ -6,11 +6,20 @@
     </head>
     <body>
         <script>
-            <div class="immagini">
-                var sport=[]
-                var calorie=[]
-                var immagini=[]
-            </div>
+            function somma(){
+
+            }
         </script>
+        <div class="Immagini">
+            <script>
+                var sport=["Calcio", "Tennis"];
+                var calorie=[10,8];
+                var Immagini=["Immagini/Calcio.jpg", "Immagini/Tennis.jpg"];
+                for(i in kcal){
+                    document.write("<img src='"+Immagini[i]+"' onclick=''>");
+                }
+            </script>
+        </div>
+        </body>
     </body>
 </html>
