--- a/Esercizi Javascript/Tris.html
+++ b/Esercizi Javascript/Tris.html
@@ -1,50 +1,88 @@
 <!DOCTYPE html>
-<html lang="it" dir="ltr">
-    <head>
-        <meta charset="utf-8">
-        <title>Tris</title>
-        <style>
+<html lang="it">
+<head>
+    <meta charset="UTF-8">
+    <title>Gioco del Tris</title>
+    <style>
+        #board {
+            display: grid;
+            grid-template-columns: repeat(3, 100px);
+            grid-gap: 5px;
+        }
+        #board input {
+            width: 100px;
+            height: 100px;
+            font-size: 24px; /*Estetica della tabella scopiazzata un po' su google insieme al resto dello style sopra*/
+        }
+        p {
+            margin-top: 20px;
+            font-size: 24px;
+        }
+    </style>
+</head>
+<body>
+    <h1>Gioco del Tris</h1>
+    <div id="board">
+        <input id="cell-0" type="button" onclick="gestisciClick(0)">
+        <input id="cell-1" type="button" onclick="gestisciClick(1)">
+        <input id="cell-2" type="button" onclick="gestisciClick(2)">
+        <input id="cell-3" type="button" onclick="gestisciClick(3)">
+        <input id="cell-4" type="button" onclick="gestisciClick(4)">
+        <input id="cell-5" type="button" onclick="gestisciClick(5)">
+        <input id="cell-6" type="button" onclick="gestisciClick(6)">
+        <input id="cell-7" type="button" onclick="gestisciClick(7)">
+        <input id="cell-8" type="button" onclick="gestisciClick(8)">
+    </div>
+    <p id="message"></p>
 
-        </style>
-        </head>
-        <body>
-                <tr>
-                    <td onclick="mossa(2,0)"></td>
-                <tr>
-                    <td onclick="mossa(0,0)"></td>
-                    <td onclick="mossa(0,1)"></td>
-                    <td onclick="mossa(0,2)"></td>
-                </tr>
-                <tr>
-                    <td onclick="mossa(1,0)"></td>
-                    <td onclick="mossa(1,1)"></td>
-                    <td onclick="mossa(1,2)"></td>
-                </tr>
-                <tr>
-                    <td onclick="mossa(2,1)"></td>
-                    <td onclick="mossa(2,2)"></td>
-                </tr>
-                document.write("<table>");
-                document.write("<tr>");
-                document.write('<td><button onclick="mossa(0,0)"></button></td>');
-                document.write('<td><button onclick="mossa(0,1)"></button></td>');
-                document.write('<td><button onclick="mossa(0,2)"></button></td>');
-                document.write("</tr>");
-                document.write("</table>");
-                    <tr>
-                document.write("</table")
-                var Posti=[" "," "," "," "," "," "," "," "," "]
-                var Utente2="O"
-                var Posti=[" "," "," "," "," "," "," "," "," ",]
-                function mossa(x, y){
-                    for(var i = 0; i < dim; i++){
-                function mossa(){
-                    for(var i; i<dim; i++){
-                        for(var j; j<i; j++){
-                            document.write()
-                        }
+    <script>
+        var tabellone = ["", "", "", "", "", "", "", "", ""]
+        var giocatoreCorrente = 'X'
+
+        function controllaVincitore() {
+            var combinazioniVincita = [[0, 1, 2], [3, 4, 5], [6, 7, 8], [0, 3, 6], [1, 4, 7], [2, 5, 8], [0, 4, 8], [2, 4, 6]] //Combinazioni di vincita
+            for (var i = 0; i < combinazioniVincita.length; i++) {
+                var a = combinazioniVincita[i][0]
+                var b = combinazioniVincita[i][1]
+                var c = combinazioniVincita[i][2]
+                if (tabellone[a] !== "" && tabellone[a] == tabellone[b] && tabellone[b] == tabellone[c]) {
+                    return tabellone[a]
+                }
+            }
+            for (var j = 0; j < tabellone.length; j++) {
+                if (tabellone[j] == "") {
+                    return null
+                }
+            }
+            return 'Pareggio'
+        }
+        function gestisciClick(indice) {
+            if (tabellone[indice] == "") {
+                tabellone[indice] = giocatoreCorrente
+                var cella = document.getElementById('cell-' + indice)
+                cella.value = giocatoreCorrente
+                cella.disabled = true // Disabilita il pulsante(molto carino)
+                var vincitore = controllaVincitore()
+                if (vincitore) {
+                    if (vincitore == 'Pareggio') {
+                        document.getElementById('message').innerText = 'Pareggio!'
+                    } else {
+                        document.getElementById('message').innerText = vincitore + ' ha vinto!'
                     }
-                } 
-            </script>
-        </body>
-    </html>
+                    for (var k = 0; k < 9; k++) {
+                        document.getElementById('cell-' + k).disabled = true
+                    }
+                } else {
+                    if (giocatoreCorrente == 'X') {
+                        giocatoreCorrente = 'O'
+                    } else {
+                        giocatoreCorrente = 'X'
+                    }
+                    document.getElementById('message').innerText = 'Turno di: ' + giocatoreCorrente
+                }
+            }
+        }
+        document.getElementById('message').innerText = 'Turno di: ' + giocatoreCorrente
+    </script>
+</body>
+</html>
