--- a/Esercizi Javascript/Esercizio dato dalla Paci.html
+++ b/Esercizi Javascript/Esercizio dato dalla Paci.html
@@ -8,17 +8,17 @@ function cambia(og) {
 
 function titolo(og) {
     var titoloInserito = og.value;
-    document.getElementById("Rur").innerHTML = "Titolo canzone: " + titoloInserito;
+    document.getElementById("Rur").innerHTML = document.getElementById("Rur").innerHTML + "Titolo canzone: " + titoloInserito;
 }
 
 function rut(og) {
     var genere = og.nextSibling.textContent.trim();
-    document.getElementById("Rur").innerHTML = "Genere: " + genere;
+    document.getElementById("Rur").innerHTML = document.getElementById("Rur").innerHTML + "<br>" + "Genere: " + genere;
 }
 
 function Select() {
     var categoria = document.getElementById("categoria").value;
-    document.getElementById("Rur").innerHTML = "Categoria: " + categoria;
+    document.getElementById("Rur").innerHTML = document.getElementById("Rur").innerHTML + "<br>" + "Categoria: " + categoria;
 }
 </script>
 <body>
