--- a/Esercizi Javascript/Esercizio strano della Paci.html
+++ b/Esercizi Javascript/Esercizio strano della Paci.html
@@ -5,7 +5,8 @@
         </style>
         <script>
             function aggiungi(og){
-
+                var regaloInserito = og.value;
+                document.getElementById("lol").innerHTML = regaloInserito;
             }
             function Pagamento(og){
                 
@@ -16,18 +17,18 @@
         <div>
         <h3>Regali</h3>
         Seleziona il regalo <br>
-        <input type="radio" name="regalo" value="10"> Trenino  <br>
-        <input type="radio" name="regalo" value="15"> Macchina <br>
-        <input type="radio" name="regalo" value="9"> Bambola <br>
-        <button type="button" onclick="Aggiungi(this)">Aggiungi regalo</button> <br>
+        <input type="radio" name="regalo" onchange="aggiungi(this)" value="10"> Trenino(10) <br>
+        <input type="radio" name="regalo" onchange="aggiungi(this)" value="15"> Macchina(15) <br>
+        <input type="radio" name="regalo" onchange="aggiungi(this)" value="9"> Bambola(9) <br>
+        <button type="button">Aggiungi regalo</button> <br>
         Mezzo di trasporto <br>
-        <input type="radio" name="trasporto" value="100"> Renna <br>
-        <input type="radio" name="trasporto" value="20"> Treno <br>
-        <input type="radio" name="trasporto" value="50"> Aereo <br>
+        <input type="radio" name="trasporto" value="10"> Renna(10) <br>
+        <input type="radio" name="trasporto" value="50"> Treno(50)<br>
+        <input type="radio" name="trasporto" value="100"> Aereo(100) <br>
     </div>
     <div>
         <img src="Immagini/gatto.jpg" width="200"> <p id="parag"></p> <br>
-        Costo Regali <input type="text" name="regalo"> <br>
+        Costo Regali <input type="text" name="regaloo" id="lol"> <br>
         Costo Regali con il mezzo di trasporto <input type="text" name="reg_tran"> <br>
         <button type="button" name="pagamento" onclick="Pagamento(this)">Vai al Pagamento</button> 
     </div>
