--- a/Esercizi Javascript/Gioco di Calcolo mentale.html
+++ b/Esercizi Javascript/Gioco di Calcolo mentale.html
@@ -49,7 +49,7 @@
     <body>
         <h1>GIOCO DI CALCOLO MENTALE</h1>
         <p id="p2">Rispondi il più velocemente possibile</p>
-        <p id="nuovoopp"> </p> <input type="text" id="risposta1"> <br>
+        <p id="nuovoopp" align="center"> </p> <p align="center"> <input type="text" id="risposta1"> </p>
         <p align="center"><button type="button" onclick="Verifica()">Verifica</button>
             <button type="button" onclick="NuovaOperazione()">Nuova Operazione</button></p>
         
