--- a/Esercizi Javascript/Esercizio prenotazione Hotel.html
+++ b/Esercizi Javascript/Esercizio prenotazione Hotel.html
@@ -59,7 +59,7 @@
        <h1>Prenotazione Hotel</h1> 
        Nome:<input type="text" id="nome_hotel"> <br> 
        Numero di notti:<input type="text" id="numero_notti"> <br> 
-       Camera: <br>
+       <label>Camera: &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Extra:</label><br>
         <label> <input type="radio" id="camera" name="camera" value="50" onchange="Calcola_prezzo(this)">Singola (€50/notte)  <input type="checkbox" id="Colazione" value="10" onchange="Calcola_prezzo(this)"> Colazione inclusa (+10/notte) </label> <br>
         <label> <input type="radio" id="camera" name="camera" value="80" onchange="Calcola_prezzo(this)">Doppia (€80/notte) <input type="checkbox" id="Parcheggio" value="5" onchange="Calcola_prezzo(this)"> Parcheggio (+5/notte) </label> <br>
         <input type="radio" id="camera" name="camera" value="120" onchange="Calcola_prezzo(this)">Suite (€120/notte) <br>
